<resources>
    <string name="app_name">VoiceCon</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navigator -->
    <string name="nav_logbox">Logbox</string>
    <string name="nav_history">MQTT history</string>
    <string name="nav_broker_list">MQTT Broker list</string>
    <string name="nav_add_broker">Add MQTT broker</string>
    <string name="nav_controller">Controller</string>

    <!-- UI -->
    <string name="init_msg">App is ready now!\n + Drag body to left/right : change current screen\n + Drag in left side : show drawer menu\n + Touch floating menu : start speech recognition\n\n</string>
    <string name="init_msg_history">MQTT history : </string>
    <string name="init_msg_handle">Handle\n</string>
    <string name="settings_background_service">Run in background</string>
    <string name="menu_clear_log">Clear log</string>
    <string name="menu_clear_history">Clear history</string>
    <string name="menu_settings">Settings</string>

    <!-- Speech Recognition -->
    <string name="speech_listening">Listening your voice...</string>
    <string name="speech_stop">Stop</string>
    <string name="speech_stopped">Stopped</string>
    <string name="speech_ready">Voice controller is ready!! \n\n</string>
    <string name="voice_command">Commands</string>
    <string name="voice_command_hint">Touch mic icon and speak something!!</string>
    <string name="commandTopicHint">Topic to send command (ex: home/cmd/input)</string>
    <string name="voice_pub_result">Published to %d MQTT broker.</string>

    <!-- Controller -->
    <string name="control_select">Select control type</string>
    <string name="ctrl_spinner_title">Control type</string>
    <string-array name="control_type_array">
        <item>Switch</item>
        <item>Slide</item>
        <item>Keypad</item>
        <item>Text input</item>
        <item>Color picker</item>
    </string-array>
    <string name="control_on">on</string>
    <string name="control_off">off</string>
    <string name="control_switch1">Switch1</string>
    <string name="control_switch2">Switch2</string>
    <string name="control_switch3">Switch3</string>
    <string name="control_switch4">Switch4</string>
    <string name="control_switch5">Switch5</string>
    <string name="control_slide1">Slide1</string>
    <string name="control_slide2">Slide2</string>
    <string name="control_slide3">Slide3</string>
    <string name="control_slide4">Slide4</string>
    <string name="control_slide5">Slide5</string>
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="keypad_0">0</string>
    <string name="keypad_as">.</string>
    <string name="keypad_sh">#</string>
    <string name="keypad_pl">+</string>
    <string name="keypad_mi">-</string>
    <string name="keypad_mu">*</string>
    <string name="keypad_di">/</string>
    <string name="textInput1">Text input 1</string>
    <string name="control_color">Color</string>

    <!-- Settings -->
    <string name="result_type">Result type</string>
    <string name="result_value">Value only</string>
    <string name="result_simple">Simple structure</string>
    <string name="result_json">JSON</string>
    <string name="interval">Sending interval</string>
    <string name="interval_hint">Prevent too fast update. Type time in milli-second.</string>
    <string name="show_float_ui">Show floating icon</string>
    <string name="speech_language">Speech recognition language</string>
    <string-array name="locale_array">
        <item>English</item>
        <item>Korean</item>
    </string-array>


    <!-- Common words -->
    <string name="add_new">Add</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="select">select</string>
    <string name="setTargetTopic">Set target topic!!</string>


    <!-- MQTT: Strings that need formatting  -->
    <string name="title_mqtt">MQTT</string>

    <string name="server">Server</string>
    <string name="port">Port</string>

    <string name="connectTo">Connect to</string>
    <string name="connect">Connect</string>
    <string name="connectedto">Connected to </string>
    <string name="Disconnect">Disconnect</string>
    <string name="deleteConn">Delete Connection</string>
    <string name="connDeleted">Connection deleted</string>
    <string name="connectionInfo">Connection Info</string>
    <string name="advancedOptional">Advanced (optional)</string>

    <string name="save">Save</string>
    <string name="title_activity_connection_details">Connection Details</string>
    <string name="startLogging">Enable Logging</string>
    <string name="endLogging">Disable Logging</string>
    <string name="missingOptions">ClientID, server address or Port number is missing. Please correct or press back arrow cancel.</string>

    <string name='dateFormat'>dd/MM/yy \'at\' HH:mm:ss</string>
    <string name="unkown_error">Unknown Error</string>
    <string name="disconnectClient">Disconnect Client?</string>
    <string name="deleteDialog">The selected client is currently connected or connecting, deleting this connection will cause it to be disconnected.</string>
    <string name="continueBtn">Continue</string>
    <string name="cancelBtn">Cancel</string>

    <string name="newConnectionAdded">Added a new Connection</string>
    <string name="newConnection">New Connection</string>
    <string name="newConnectionShort">+</string>
    <string name="clientID">Client ID</string>
    <string name="subscribe">Subscribe</string>
    <string name="publish">Publish</string>
    <string name="title_activity_subscribe">Subscribe</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnectedFrom">Disconnected from</string>
    <string name="topic">Topic</string>
    <string name="history">History</string>
    <string name="title_activity_history">History</string>
    <string name="subscribed">Subscribed to </string>
    <string name="token">org.eclipse.paho.android.service.sample.ClientConnections</string>
    <string name="no_status">Unknown connection status to</string>
    <string name="connecting">Connecting to</string>
    <string name="disconnecting">Disconnecting from</string>
    <string name="connectionError">An error occurred connecting to</string>
    <string name="cleanSessionDetails">Drop unreceived QoS1 or 2 messages when connect</string>

    <string name="setLastWill">Set Last Will Message</string>
    <string name="willMessage">Set Last Will Message</string>
    <string name="willMessageShort">Last Will</string>
    <string name="willMessageOptional">Last Will (optional)</string>
    <string name="notifyTitle">MQTT Message Received</string>
    <string name="notifyTitle_connectionLost">MQTT Client Has Lost Connection</string>

    <string name="message">Message</string>
    <string name="qos0">0</string>
    <string name="qos1">1</string>
    <string name="qos2">2</string>
    <string name="empty"></string>
    <string name="qos">QoS</string>
    <string name="retained">Retained</string>
    <string name="cleanSession">Clean Session</string>
    <string name="advanced">Advanced Options</string>
    <string name="advancedShort">Advanced</string>
    <string name="title_activity_advanced">Advanced</string>
    <string name="uname">User Name</string>
    <string name="pass">Password</string>
    <string name="ssl">SSL</string>
    <string name="timeout">Time Out</string>
    <string name="keepalive">Keep Alive</string>

    <string name="messageRecieved">Received message %1$s &lt;br/&gt; &lt;small&gt;Topic: %2$s &lt;/small&gt; </string>
    <string name="messageRecieved2">Received : </string>
    <string name="messageDelivered">Delivered message successfully</string>
    <string name="messageDelivered2">Delivered</string>
    <string name="timestamp">&lt;br/&gt; &lt;small&gt; %1$s &lt;/small&gt;</string>
    <string name="notification">%1$s has received %2$s on topic %3$s</string>
    <!--<string name="toast_pub_success">Published: %1$s to topic: %2$s</string>-->
    <string name="toast_pub_success">Published: %1$s</string>
    <string name="toast_sub_success">Subscribed to %1$s</string>
    <string name="toast_disconnected">Disconnected from %1$s, %2$s</string>
    <string name="toast_connected">Connected to </string>
    <string name="toast_pub_failed">Failed to publish message: %1$s to topic: %2$s</string>
    <string name="toast_sub_failed">Failed to subscribe to %1$s</string>
    <string name="connection_lost">%1$s has lost connection to %2$s</string>
    <string name="failure_disconnect">Disconnect failed.&lt;br/&gt; &lt;small&gt;Reason: %s&lt;/small&gt; </string>
    <string name="failure_connect">Client failed to connect.&lt;br/&gt; &lt;small&gt;Reason: %s&lt;/small&gt;</string>
    <string name="client_connected">Client connected successfully</string>
    <string name="property_changed">Connection property changed.</string>

    <string name="unameClientId">Unique ID</string>
    <string name="serverURIHint">example.example.com</string>
    <string name="portHint">1883</string>
    <string name="contentDescriptionSSL">Enable SSL</string>
    <string name="contentDescriptionCleanSession">Clean Session</string>
    <string name="topicHint">Topic (ex. home/cmd/input)</string>
    <string name="lastWillTopicHint">Last will topic</string>
    <string name="messageHint">Type something here...</string>
    <string name="lastWillMessageHint">Last will message</string>
    <string name="unameHint">user</string>
    <string name="passwordHint">password</string>
    <string name="timeoutHint">60</string>
    <string name="keepaliveHint">200</string>
    <string name="sslKeyLocaltion">file://</string>
    <string name="sslKeySelect">Select SSL key(.bks)</string>

    <!-- Error message -->
    <string name="errorClientId">Type client ID!!</string>
    <string name="errorServerUri">Type server URI!!</string>
    <string name="errorPort">Type port number!!</string>
    <string name="errorTopic">Type topic!!</string>
    <string name="errorMessage">Type message!!</string>
    <string name="errorVoiceResult">No command found!!</string>

</resources>
