<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item
            android:id="@+id/nav_logbox"
            android:icon="@drawable/icon_box_full"
            android:title="@string/nav_logbox" />-->
        <item
            android:id="@+id/nav_controller"
            android:icon="@drawable/icon_mixer"
            android:title="@string/nav_controller" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/icon_book"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_broker_list"
            android:icon="@drawable/icon_folder_document"
            android:title="@string/nav_broker_list" />
        <item
            android:id="@+id/nav_add_broker"
            android:icon="@drawable/icon_notepad"
            android:title="@string/nav_add_broker" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/icon_wrench_screwdriver"
                android:title="@string/menu_settings" />
            <!--<item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />-->
        </menu>
    </item>

</menu>
