
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth = "300dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dip"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        style="@style/AppTheme.FormButton.Dialog" />

    <Button
        android:id="@+id/btn_disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Disconnect"
        style="@style/AppTheme.FormButton.Dialog" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        style="@style/AppTheme.FormButton.Dialog" />

    <!-- Default: not visible -->
    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:visibility="visible"
        style="@style/AppTheme.FormButton.Dialog" />
    
</LinearLayout>
