<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/AppTheme.FragmentContainer"
    tools:context=".MainActivity$LogboxFragment" >

    <!-- header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip"
        android:background="@color/deepgreen5"
        android:gravity="center_vertical">

        <!-- title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dip"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:layout_marginLeft="10dip"
                android:src="@drawable/icon_book"/>

            <TextView
                android:id="@+id/historyTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                style="@style/AppTheme.FormText.Bold"
                android:text="@string/nav_history" />
            <LinearLayout
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="2dip"/>
            <ImageView
                android:id="@+id/inputButton"
                android:layout_width="20dip"
                android:layout_height="20dip"
                android:src="@drawable/icon_sign_down"/>
        </LinearLayout>

        <!-- input fields for pub/sub -->
        <LinearLayout
            android:id="@+id/inputGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:background="@color/deepgreen6"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/topicGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/topicTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    style="@style/AppTheme.FormText.Bold"
                    android:text="@string/topic" />

                <AutoCompleteTextView
                    android:id="@+id/topic"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/topicHint"
                    style="@style/AppTheme.FormEditText"
                    android:inputType="text" />

                <Button
                    android:id="@+id/buttonSub"
                    android:layout_width="wrap_content"
                    android:layout_height="30dip"
                    android:layout_margin="2dip"
                    android:text="@string/subscribe"
                    android:visibility="gone"
                    style="@style/AppTheme.FormButton.Small" />
                <Button
                    android:id="@+id/buttonPub"
                    android:layout_width="wrap_content"
                    android:layout_height="30dip"
                    android:layout_margin="2dip"
                    android:text="@string/publish"
                    android:visibility="gone"
                    style="@style/AppTheme.FormButton.Small" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/msgGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/msgTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    style="@style/AppTheme.FormText.Bold"
                    android:text="@string/message" />

                <EditText
                    android:id="@+id/message"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:hint="@string/messageHint"
                    style="@style/AppTheme.FormEditText"
                    android:inputType="textMultiLine"
                    android:lines="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/qosGroup"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp" >

                <TextView
                    android:id="@+id/qosTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="10dip"
                    android:layout_marginRight="10dip"
                    style="@style/AppTheme.FormText.Bold"
                    android:text="@string/qos" />

                <RadioGroup
                    android:id="@+id/qosRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <RadioButton
                        android:id="@+id/qos0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        style="@style/AppTheme.FormRadioBtn"
                        android:text="@string/qos0" />
                    <RadioButton
                        android:id="@+id/qos1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.FormRadioBtn"
                        android:text="@string/qos1" />
                    <RadioButton
                        android:id="@+id/qos2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme.FormRadioBtn"
                        android:text="@string/qos2" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="2dip"/>

                <LinearLayout
                    android:id="@+id/retainedGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/retainedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dip"
                        style="@style/AppTheme.FormText.Bold"
                        android:text="@string/retained" />

                    <CheckBox
                        android:id="@+id/retained"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="2dip"/>
            </LinearLayout>
        </LinearLayout>




    </LinearLayout>


    <!-- body -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top">

        <ScrollView
            android:id="@+id/scroll_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dip"
                style="@style/AppTheme.TextBox" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>