
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:minWidth = "300dip"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dip"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <!-- Toggle floating UI -->
    <LinearLayout
        android:id="@+id/showFloatGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/showFloatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            style="@style/AppTheme.FormText.Bold"
            android:text="@string/show_float_ui" />

        <CheckBox
            android:id="@+id/showFloat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty" />
    </LinearLayout>

    <!-- spacer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/blue3"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip" />

    <!-- Result sending interval -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/intervalGroup"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/intervalTextView"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            style="@style/AppTheme.FormText.Bold"
            android:text="@string/interval" />

        <EditText
            android:id="@+id/interval"
            android:layout_weight="2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            style="@style/AppTheme.FormEditText"
            android:hint="@string/interval_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/intervalDescGroup"
        android:layout_marginTop="5dip" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="2dip"/>
        <TextView
            android:layout_width="0dip"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            style="@style/AppTheme.FormText.Bold"
            android:text="@string/interval_hint" />
    </LinearLayout>

    <!-- spacer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/blue3"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip" />

    <!-- Result message type -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultGroup"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/resultView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dip"
            android:layout_marginRight="10dip"
            style="@style/AppTheme.FormText.Bold"
            android:text="@string/result_type" />

        <RadioGroup
            android:id="@+id/resultRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RadioButton
                android:id="@+id/result0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_value"
                android:tag="0"
                style="@style/AppTheme.FormRadioBtn"/>
            <RadioButton
                android:id="@+id/result1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_simple"
                android:tag="1"
                style="@style/AppTheme.FormRadioBtn"/>
            <RadioButton
                android:id="@+id/result2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_json"
                android:tag="2"
                style="@style/AppTheme.FormRadioBtn"/>
        </RadioGroup>
    </LinearLayout>

    <!-- spacer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/blue3"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip" />

    <!-- locale -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/localeGroup"
        android:layout_marginTop="5dip" >

        <TextView
            android:id="@+id/localeTextView"
            android:layout_width="0dip"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dip"
            style="@style/AppTheme.FormText.Bold"
            android:text="@string/interval" />

        <Spinner
            android:id="@+id/localeSpinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            style="@style/AppTheme.FormSpinner" />
    </LinearLayout>

    <!-- spacer -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/blue3"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="5dip" />

    <!-- Buttons -->
    <LinearLayout
        android:id="@+id/buttonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dip" >

        <Button
            android:id="@+id/btn_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:visibility="visible"
            style="@style/AppTheme.FormButton.Dialog" />
    </LinearLayout>

</LinearLayout>
